<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name_hint"
            android:inputType="textCapWords"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/editTextProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_description_hint"
            android:inputType="textMultiLine"
            android:autofillHints="none" />

        <EditText
            android:id="@+id/editTextProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/product_price_hint"
            android:autofillHints="none" />

        <EditText
            android:id="@+id/editTextProductImageUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_image_url_hint"
            android:inputType="textUri"
            android:autofillHints="url" />

        <Button
            android:id="@+id/buttonSaveProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_product_button" />
    </LinearLayout>
</ScrollView>
